--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+form {
+  display: flex;
+  flex-direction: column;
+  padding: 40px 56px;
+}
+
+.mb-16 {
+  margin-bottom: 16px !important;
+}
